--- a/backend/cinema_backend/requirements.txt
+++ b/backend/cinema_backend/requirements.txt
@@ -11,3 +11,6 @@ pycparser==2.22
 PyJWT==2.9.0
 sqlparse==0.5.1
 typing_extensions==4.12.2
+django-environ==0.8.1
+django-cors-headers==3.14.0
+psycopg2-binary==2.9.5
