fix: docker configurations

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,10 @@ services:
     build:
       context: ./backend/cinema_backend
     container_name: django_backend
-    command: sh -c "python manage.py runserver 0.0.0.0:8000"
+    command: >
+      sh -c "python manage.py makemigrations --noinput &&
+         python manage.py migrate --noinput &&
+         python manage.py runserver 0.0.0.0:8000 --noreload"
     volumes:
       - ./backend/cinema_backend:/app
 
