--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,7 +29,7 @@ services:
          python manage.py runserver 0.0.0.0:8000 --noreload"
     volumes:
       - ./backend/cinema_backend:/app
-
+      - ./backend/cinema_backend:/cinema_backend
     environment:
       - DB_HOST=db
       - DB_NAME=cineach
